PGW-34: Responsive sidebar positioning fixed, linespacing updated

--- a/sites/all/themes/tpg_theme/sass/base/_base.scss
+++ b/sites/all/themes/tpg_theme/sass/base/_base.scss
@@ -145,6 +145,10 @@ p {
   &:last-child {
     margin-bottom: 0;
   }
+
+  &:empty {
+    display: none;
+  }
 }
 
 blockquote {
